= Parceler Changelog

== Release 1.1.5 (2016-05-25)

Bug Fixes::
  * Fixes issue with using non-local target classes' classloader 
  * Fixes issue with checking Parcelable inheritance

== Release 1.1.4 (2016-05-16)

Bug Fixes::
  * Re-implemented implementation parameter
  * Fixed identity handling in object graphs by using list instead of map

== Release 1.1.3 (2016-05-14)

Bug Fixes::
  * Fixed identity handling by using IdentityCollection

Depreciations::
  * Removed METHOD serialization strategy
  * Removed `parcelsIndex` configuration option on `Parcel` annotation

== Release 1.1.2 (2016-04-30)

Bug Fixes::
  * Fixed issue generating Parcelable classes from the output of other annotation processors

== Release 1.1.1 (2016-04-11)

Bug Fixes::
  * Fixed issue handling null associated Parcels.
  * Fixed classloader used with related classes.

== Release 1.1.0 (2016-04-04)

Enhancements::
  * Added `@OnWrap` and `@OnUnwrap` callbacks.
  * Added initial size to relevant collections.
  * Added instance identity collection during marshalling to avoid instance loops.
  * Significantly reduced the number of methods generated.

Deprecations::
  * Removed `NullParcelable` shim from `Parcels` utility class for `null` inputs.

Bug Fixes::
  * Fixed Enum array parceling, previously serialzied as a enum instead of an array.

== Release 1.0.4 (2015-10-27)

Enhancements::
  * Add validation for factory method parameters.
  * Changed `@Parcel` `converter` property to `TypeRangeParcelConverter`.
  * Made Creator inner class public to accommodate testing.
  * Added validation error to non-static inner classes.

== Release 1.0.3 (2015-07-25)

Bug Fixes::
  * Fixed seralization of null enums.

== Release 1.0.2 (2015-07-20)

Enhancements::
  * Enabled recognition of `@ParcelPropertyConverter` annotation on getters in addition to setters.
  * Added enum support.
  * Added VALUE seralization type.

== Release 1.0.1 (2015-06-11)

Bug Fixes::