@@ -1,5 +1,10 @@
 = Parceler Changelog
 
+== Upcoming Release
+
+Enhancements::
+  * Added describeContents option on `@Parcel` to set generated return value to `describeContents()` method.
+
 == Release 1.1.5 (2016-05-25)
 
 Bug Fixes::
